fixed the project create fields
